# block-place

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.zig  shell.nix
api/: api.zig
client/: Cargo.toml  c.zig  main.zig
client/src/: main.rs
default-plugin/: plugin.zig
nix/: sources.json  wasmer-c-api.nix  wasmtime-c-api.nix  wasmtime.pc
server/: Cargo.toml  c.zig  main.zig  plugin.zig  wasm.zig
server/src/: main.rs  plugin.rs
shared/: Cargo.toml
shared/src/: packets.rs
src/: main.zig
wasmer/: wasmer.zig
