[package]
name = "block-place-server"
version = "0.1.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.18"
harlequinn = "0.1"
rcgen = "*"
anyhow = "1.0"
dashmap = "*"
